# standard-lib

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: docs.yml
doc/: CNAME  kali-dark.css
src/: lib.rs  main.rs
src/binary_tree/: mod.rs
src/binary_tree/map/: binary_tree_map.rs  iter.rs  mod.rs  node.rs
src/collections/: mod.rs
src/collections/binary_tree/: mod.rs
src/collections/circular/: mod.rs
src/collections/cons/: mod.rs
src/collections/contiguous/: mod.rs
src/collections/hash/: mod.rs
src/collections/linked/: mod.rs
src/collections/traits/: mod.rs  set.rs
src/contiguous/: array.rs  iter.rs  mod.rs  vector.rs
src/contiguous/array/: array.rs  iter.rs  mod.rs  tests.rs
src/contiguous/vector/: iter.rs  mod.rs  vector.rs
src/fs/: error.rs  fd.rs  file_type.rs  fs.rs  metadata.rs  mod.rs  panic.rs  syscall.rs
src/fs/dir/: dir.rs  dir_entry.rs  mod.rs
src/fs/file/: access.rs  create.rs  error.rs  file.rs  mod.rs  options.rs  union_errors.rs
src/fs/path/: abs.rs  abs_path.rs  dispatch.rs  display.rs  error.rs  iter.rs  mod.rs  ops.rs  path.rs  path_traits.rs  rel.rs  rel_path.rs  validity.rs
src/fs/util/: fd.rs  file_type.rs  mod.rs  syscall.rs
src/hash/: iter.rs  mod.rs
src/hash/map/: error.rs  hash_map.rs  iter.rs  mod.rs
src/linked/: cursor.rs  iter.rs  list.rs  mod.rs  node.rs
src/traits/: mod.rs  set.rs
src/types/: array.rs  linked_list.rs  mod.rs  vector.rs
src/util/: alloc.rs  error.rs  fmt.rs  fs.rs  hash.rs  mod.rs  option.rs  panic.rs  result.rs  syscall.rs
(+52 files in other folders)
